solve category(title,jobs) colors. make modal for adding job

--- a/index.html
+++ b/index.html
@@ -15,6 +15,22 @@
 </head>
 
 <body>
+    <div class="modal">
+        <div class="main">
+            <div class="close">
+                <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M6.06661 3.78334L12.4999 10.2167L18.8999 3.81668C19.0413 3.66621 19.2116 3.54583 19.4006 3.46278C19.5897 3.37973 19.7935 3.3357 19.9999 3.33334C20.442 3.33334 20.8659 3.50894 21.1785 3.8215C21.491 4.13406 21.6666 4.55798 21.6666 5.00001C21.6705 5.20435 21.6326 5.40732 21.5552 5.59648C21.4778 5.78564 21.3626 5.95699 21.2166 6.10001L14.7333 12.5L21.2166 18.9833C21.4913 19.2521 21.6524 19.616 21.6666 20C21.6666 20.442 21.491 20.866 21.1785 21.1785C20.8659 21.4911 20.442 21.6667 19.9999 21.6667C19.7875 21.6755 19.5756 21.64 19.3776 21.5626C19.1797 21.4851 19 21.3673 18.8499 21.2167L12.4999 14.7833L6.08328 21.2C5.94246 21.3455 5.77422 21.4616 5.58828 21.5417C5.40235 21.6218 5.20239 21.6643 4.99995 21.6667C4.55792 21.6667 4.13399 21.4911 3.82143 21.1785C3.50887 20.866 3.33328 20.442 3.33328 20C3.32939 19.7957 3.3673 19.5927 3.44469 19.4035C3.52207 19.2144 3.63729 19.043 3.78328 18.9L10.2666 12.5L3.78328 6.01668C3.50859 5.74794 3.34751 5.38403 3.33328 5.00001C3.33328 4.55798 3.50887 4.13406 3.82143 3.8215C4.13399 3.50894 4.55792 3.33334 4.99995 3.33334C5.39995 3.33834 5.78328 3.50001 6.06661 3.78334Z"
+                        fill="black" />
+                </svg>
+            </div>
+            <h3>Title</h3>
+            <input type="text" name="job" placeholder="give your title...">
+            <div class="submit-button">
+                <span>Insert</span>
+            </div>
+        </div>
+    </div>
     <div class="add-part">
         <div class="add-button">
             <span>Add</span>
@@ -55,10 +71,10 @@
                 </div>
             </div>
         </div>
-        <div class="category" id="Later">
+        <div class="category" id="Future">
             <div class="title">
                 <h2>
-                    Later
+                    Future
                 </h2>
                 <svg width="48" height="49" viewBox="0 0 48 49" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M36 18.5L24 30.5L12 18.5" stroke="black" stroke-width="4" stroke-linecap="round"
@@ -84,10 +100,10 @@
                 </div>
             </div>
         </div>
-        <div class="category" id="Later">
+        <div class="category" id="Today">
             <div class="title">
                 <h2>
-                    Later
+                    Today
                 </h2>
                 <svg width="48" height="49" viewBox="0 0 48 49" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M36 18.5L24 30.5L12 18.5" stroke="black" stroke-width="4" stroke-linecap="round"
