--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
+    <script src="index.js" defer></script>
 </head>
 
 <body>
-    <div class="modal">
+    <div class="modal_">
         <div class="main">
             <div class="close">
                 <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -130,6 +131,7 @@
             </div>
         </div>
     </div>
+    <div class="overlay d-none"></div>
 </body>
 
 </html>
