--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
     </div>
-    <div class="main">
+    <main>
         <div class="add-part">
             <div class="add-button">
                 <span>Add</span>
@@ -44,64 +44,6 @@
             </div>
         </div>
         <div class="categorys">
-            <div class="category" id="Later">
-                <div class="title">
-                    <h2>
-                        Later
-                    </h2>
-                    <svg width="48" height="49" viewBox="0 0 48 49" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M36 18.5L24 30.5L12 18.5" stroke="black" stroke-width="4" stroke-linecap="round"
-                            stroke-linejoin="round" />
-                    </svg>
-                </div>
-                <div class="jobs">
-                    <div class="job checked">
-                        <h4>make my bed</h4>
-                        <div class="check-box">
-                            <svg width="24" height="20" viewBox="0 0 20 20" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" clip-rule="evenodd"
-                                    d="M19.495 1.13301C19.7166 0.999715 19.9812 0.95744 20.2333 1.01505C20.4854 1.07267 20.7053 1.22569 20.847 1.44201L21.837 2.95201C21.9661 3.14927 22.0213 3.38578 21.9929 3.61979C21.9646 3.85381 21.8544 4.07028 21.682 4.23101L21.679 4.23501L21.665 4.24801L21.608 4.30101L21.383 4.51601C20.138 5.7236 18.9307 6.96954 17.763 8.25201C15.566 10.668 12.957 13.83 11.201 16.898C10.711 17.754 9.514 17.938 8.804 17.199L2.319 10.461C2.22607 10.3644 2.1535 10.2501 2.10562 10.1249C2.05774 9.99971 2.03551 9.86616 2.04027 9.7322C2.04503 9.59824 2.07667 9.4666 2.13332 9.34512C2.18996 9.22363 2.27045 9.11477 2.37 9.02501L4.33 7.25701C4.50225 7.10172 4.72311 7.01112 4.95478 7.00072C5.18646 6.99032 5.41454 7.06077 5.6 7.20001L8.90901 9.68101C14.078 4.58401 17.009 2.62801 19.495 1.13301Z"
-                                    fill="#08A20E" />
-                            </svg>
-                        </div>
-                    </div>
-                    <div class="job">
-                        <h4>make my bed</h4>
-                        <div class="check-box">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="category" id="Future">
-                <div class="title">
-                    <h2>
-                        Future
-                    </h2>
-                    <svg width="48" height="49" viewBox="0 0 48 49" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M36 18.5L24 30.5L12 18.5" stroke="black" stroke-width="4" stroke-linecap="round"
-                            stroke-linejoin="round" />
-                    </svg>
-                </div>
-                <div class="jobs">
-                    <div class="job checked">
-                        <h4>make my bed</h4>
-                        <div class="check-box">
-                            <svg width="24" height="20" viewBox="0 0 20 20" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" clip-rule="evenodd"
-                                    d="M19.495 1.13301C19.7166 0.999715 19.9812 0.95744 20.2333 1.01505C20.4854 1.07267 20.7053 1.22569 20.847 1.44201L21.837 2.95201C21.9661 3.14927 22.0213 3.38578 21.9929 3.61979C21.9646 3.85381 21.8544 4.07028 21.682 4.23101L21.679 4.23501L21.665 4.24801L21.608 4.30101L21.383 4.51601C20.138 5.7236 18.9307 6.96954 17.763 8.25201C15.566 10.668 12.957 13.83 11.201 16.898C10.711 17.754 9.514 17.938 8.804 17.199L2.319 10.461C2.22607 10.3644 2.1535 10.2501 2.10562 10.1249C2.05774 9.99971 2.03551 9.86616 2.04027 9.7322C2.04503 9.59824 2.07667 9.4666 2.13332 9.34512C2.18996 9.22363 2.27045 9.11477 2.37 9.02501L4.33 7.25701C4.50225 7.10172 4.72311 7.01112 4.95478 7.00072C5.18646 6.99032 5.41454 7.06077 5.6 7.20001L8.90901 9.68101C14.078 4.58401 17.009 2.62801 19.495 1.13301Z"
-                                    fill="#08A20E" />
-                            </svg>
-                        </div>
-                    </div>
-                    <div class="job">
-                        <h4>make my bed</h4>
-                        <div class="check-box">
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div class="category" id="Today">
                 <div class="title">
                     <h2>
@@ -113,7 +55,7 @@
                     </svg>
                 </div>
                 <div class="jobs">
-                    <div class="job checked">
+                    <div class="job checked" draggable="true">
                         <h4>make my bed</h4>
                         <div class="check-box">
                             <svg width="24" height="20" viewBox="0 0 20 20" fill="none"
@@ -124,7 +66,36 @@
                             </svg>
                         </div>
                     </div>
-                    <div class="job">
+                    <div class="job" draggable="true">
+                        <h4>make my bed</h4>
+                        <div class="check-box">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="category" id="Later">
+                <div class="title">
+                    <h2>
+                        Later
+                    </h2>
+                    <svg width="48" height="49" viewBox="0 0 48 49" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M36 18.5L24 30.5L12 18.5" stroke="black" stroke-width="4" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                    </svg>
+                </div>
+                <div class="jobs">
+                    <div class="job checked" draggable="true">
+                        <h4>make my bed</h4>
+                        <div class="check-box">
+                            <svg width="24" height="20" viewBox="0 0 20 20" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M19.495 1.13301C19.7166 0.999715 19.9812 0.95744 20.2333 1.01505C20.4854 1.07267 20.7053 1.22569 20.847 1.44201L21.837 2.95201C21.9661 3.14927 22.0213 3.38578 21.9929 3.61979C21.9646 3.85381 21.8544 4.07028 21.682 4.23101L21.679 4.23501L21.665 4.24801L21.608 4.30101L21.383 4.51601C20.138 5.7236 18.9307 6.96954 17.763 8.25201C15.566 10.668 12.957 13.83 11.201 16.898C10.711 17.754 9.514 17.938 8.804 17.199L2.319 10.461C2.22607 10.3644 2.1535 10.2501 2.10562 10.1249C2.05774 9.99971 2.03551 9.86616 2.04027 9.7322C2.04503 9.59824 2.07667 9.4666 2.13332 9.34512C2.18996 9.22363 2.27045 9.11477 2.37 9.02501L4.33 7.25701C4.50225 7.10172 4.72311 7.01112 4.95478 7.00072C5.18646 6.99032 5.41454 7.06077 5.6 7.20001L8.90901 9.68101C14.078 4.58401 17.009 2.62801 19.495 1.13301Z"
+                                    fill="#08A20E" />
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="job" draggable="true">
                         <h4>make my bed</h4>
                         <div class="check-box">
                         </div>
@@ -132,7 +103,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </main>
     <div class="overlay d-none"></div>
 </body>
 
