--- a/index.html
+++ b/index.html
@@ -33,14 +33,26 @@
         </div>
     </div>
     <main>
-        <div class="add-part">
-            <div class="add-button">
-                <span>Add</span>
-                <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M31.6666 21.6633H21.6666V31.6633H18.3333V21.6633H8.33331V18.33H18.3333V8.32999H21.6666V18.33H31.6666V21.6633Z"
-                        fill="black" />
-                </svg>
+        <div class="buttons-container">
+            <div class="button-container">
+                <div class="button-part add-button">
+                    <span>Add</span>
+                    <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M31.6666 21.6633H21.6666V31.6633H18.3333V21.6633H8.33331V18.33H18.3333V8.32999H21.6666V18.33H31.6666V21.6633Z"
+                            fill="black" />
+                    </svg>
+                </div>
+            </div>
+            <div class="button-container">
+                <div class="button-part save-button">
+                    <span>save</span>
+                    <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M31.6666 21.6633H21.6666V31.6633H18.3333V21.6633H8.33331V18.33H18.3333V8.32999H21.6666V18.33H31.6666V21.6633Z"
+                            fill="black" />
+                    </svg>
+                </div>
             </div>
         </div>
         <div class="categorys">
